Sec16_Chap166-X: test code optimizations